--- a/Main Road/en.lproj/Localizable.strings
+++ b/Main Road/en.lproj/Localizable.strings
@@ -8,14 +8,14 @@
 
 // Welcome screen
 "start_screen_title" = "Main road";
-"start_screen_startButton_title" = "Start";
+"start_screen_startButton_title" = "START";
 "start_screen_recordsButton_title" = "Records";
 
 // Settings screen
 "easy_level_label_title" = "easy";
 "medium_level_label_title" = "medium";
 "hard_level_label_title" = "hard";
-"settings_screen_selectButton_title" = "Select";
+"settings_screen_selectButton_title" = "SELECT";
 "settings_screen_userNameTextField_placeholder" = "User name";
 "settings_screen_navigationItem_title" = "Settings";
 "settings_screen_defaultUserName" = "Racer";
