--- a/Main Road/en.lproj/Localizable.strings
+++ b/Main Road/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 // Welcome screen
 "start_screen_title" = "Main road";
 "start_screen_startButton_title" = "START";
-"start_screen_recordsButton_title" = "Records";
+"start_screen_recordsButton_title" = "Rating";
 
 // Settings screen
 "easy_level_label_title" = "easy";
@@ -21,7 +21,7 @@
 "settings_screen_defaultUserName" = "Racer";
 
 //Records screen
-"records_screen_navigationItem_title" = "Records";
+"records_screen_navigationItem_title" = "Rating";
 
 //Race screen
 "level_label_title" = "Level";
