--- a/Main Road/en.lproj/Localizable.strings
+++ b/Main Road/en.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 
 // Welcome screen
-"start_screen_title" = "Main road";
+"start_screen_title" = "M A I N   R O A D";
 "start_screen_startButton_title" = "START";
 "start_screen_recordsButton_title" = "Rating";
 
