add background image to WelcomeViewController

--- a/Main Road/ru.lproj/Localizable.strings
+++ b/Main Road/ru.lproj/Localizable.strings
@@ -6,7 +6,7 @@
   
 */
 // Welcome screen
-"start_screen_title" = "Главная дорога";
+"start_screen_title" = "Г Л А В Н А Я  Д О Р О Г А";
 "start_screen_startButton_title" = "СТАРТ";
 "start_screen_recordsButton_title" = "Рекорды";
 
